--- a/_posts/2023-08-09-EP114.md
+++ b/_posts/2023-08-09-EP114.md
@@ -3,4 +3,4 @@ layout: mypost
 title: EP114 - 超简单制作WTG、系统U盘，小巧精悍的写盘软件，Rufus使用指南
 categories: [WTG,Rufus]
 ---
-● Rufus（官网）：https://rufus.ie/
+- Rufus（官网）：<https://rufus.ie/>
