--- a/_posts/2023-08-05-EP113.md
+++ b/_posts/2023-08-05-EP113.md
@@ -1,20 +1,21 @@
 ---
 layout: mypost
-title: EP113 - 帧数暴涨？低配救星？AtlasOS安装部署指南及性能测试
-categories: [AtlasOS]
+title: 帧数暴涨？低配救星？AtlasOS安装部署指南及性能测试**
+categories: []
 ---
+
 - AtalsOS（官网）：<https://atlasos.net/>
 
 - EasyEC（官网）：<https://firpe.cn/page-196>
 
-- EasyRC（夸克）：<https://pan.quark.cn/s/815ea8cca062> `vKcm`
+- EasyRC（夸克）：<https://pan.quark.cn/s/815ea8cca062> （提取码：vKcm）
 
-- Win10 22H2（微软官方节点）：*请使用迅雷等下载软件进行下载*
-
-```
-ed2k://|file|zh-cn_windows_11_business_editions_version_22h2_updated_april_2023_x64_dvd_7f3f319b.iso|5699682304|7226C84203584BDC33A1E8694C6C570E|/
-```
+- Win10 22H2（微软官方节点）：*请使用迅雷等第三方下载软件进行下载*
 
 ```
-magnet:?xt=urn:btih:509989ac652c2f748c894ab77c9e2faa336cd826&dn=zh-cn_windows_11_business_editions_version_22h2_updated_april_2023_x64_dvd_7f3f319b.iso
+ed2k://|file|zh-cn_windows_10_business_editions_version_22h2_updated_april_2023_x64_dvd_c03ed5aa.iso|5971707904|EED818987B8BC17F6DDC201E977A4F95|/
+```
+
+```
+magnet:?xt=urn:btih:84a9c3c817073e64b2ece7a9a6d6ea47782cdc88&dn=zh-cn_windows_10_business_editions_version_22h2_updated_april_2023_x64_dvd_c03ed5aa.iso
 ```
