Some files have been added to the category

--- a/_posts/2022-05-10-EP34.md
+++ b/_posts/2022-05-10-EP34.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 把Windows塞进U盘，即插即用，小白都懂的Win To Go教程
-categories: []
+categories: [U盘,WTG]
 ---
 
 - Windows镜像下载：<https://hellowindows.cn>
