--- a/_posts/2022-05-14-EP35.md
+++ b/_posts/2022-05-14-EP35.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 利用Ventoy打造最强大的启动U盘，把PE、Win To Go统统塞进去
-categories: []
+categories: [U盘]
 ---
 
 - U盘：32G以上，64G更佳，4K读写速度最好够快
