--- a/_posts/2023-02-01-EP73.md
+++ b/_posts/2023-02-01-EP73.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 大小核还能用吗？教你在8-13代酷睿平台安装Win7，以兼容旧软件
-categories: []
+categories: [Windows]
 ---
 
 - FirePE（官网）：<https://firpe.cn/page-247>
@@ -18,4 +18,4 @@ categories: []
 
 - ASUS EZ Installer USB3/NVME注入工具：<https://pan.quark.cn/s/ee318be5fc3a> （提取码：xVBq）
 
-- 国外大佬USB3.0驱动：[点此访问](https://winraid.level1techs.com/t/outdated-usb-3-0-3-1-drivers-original-and-modded/30871)
+- [国外大佬USB3.0驱动](https://winraid.level1techs.com/t/outdated-usb-3-0-3-1-drivers-original-and-modded/30871)
