--- a/_posts/2023-06-14-EP102.md
+++ b/_posts/2023-06-14-EP102.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 可能是维护功能最强大的PE，USBOS使用指南
-categories: []
+categories: [WinPE,U盘]
 ---
 
 - USBOS标准版（夸克）：<https://pan.quark.cn/s/ad744e1fcfbf> （提取码：xijv）
