--- a/_posts/2023-06-20-EP104.md
+++ b/_posts/2023-06-20-EP104.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 所有机型通用，利用Limbo虚拟机，给手机安装Windows
-categories: []
+categories: [Android,Windows,虚拟机]
 ---
 
 - Limbo模拟器增强汉化版（夸克）：<https://pan.quark.cn/s/231ebe4975aa> （提取码：T7Fn）
