--- a/_posts/2023-06-29-EP105.md
+++ b/_posts/2023-06-29-EP105.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: iOS设备通用，利用UTM虚拟机，给iPhone、iPad安装Windows
-categories: []
+categories: [iOS,Windows,虚拟机]
 ---
 
 - AltStore（官网）：<https://altstore.io>
