--- a/_posts/2023-07-23-EP110.md
+++ b/_posts/2023-07-23-EP110.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 第三方ROM更香？给小米平板2刷入LineageOS、RROS、RemixOS，支持双系统
-categories: []
+categories: [安卓刷机]
 ---
 
 - 小米平板2专用PE+LineageOS+RROS+RemixOS固件+Windows固件（夸克）：<https://pan.quark.cn/s/9d8ea291430a>
