--- a/_posts/2023-07-28-EP112.md
+++ b/_posts/2023-07-28-EP112.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 死去的回忆涌上心头，使用EKA2L1模拟器，在安卓系统上模拟运行诺基亚塞班Symbian游戏
-categories: []
+categories: [手机游戏]
 ---
 
 - EKA2L1（夸克）：<https://pan.quark.cn/s/95cce71dce6c> （提取码：n4TG）
