--- a/_posts/2023-08-05-EP113.md
+++ b/_posts/2023-08-05-EP113.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 帧数暴涨？低配救星？AtlasOS安装部署指南及性能测试
-categories: []
+categories: [PC游戏]
 ---
 
 - AtalsOS（官网）：<https://atlasos.net/>
