--- a/_posts/2022-11-03-EP60.md
+++ b/_posts/2022-11-03-EP60.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 将Linux To Go塞进Ventoy U盘，与PE、WTG共存
-categories: []
+categories: [U盘]
 ---
 
 - Ventoy官网：<https://www.ventoy.net/cn/>
