--- a/_posts/2023-07-18-EP109.md
+++ b/_posts/2023-07-18-EP109.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 2023年了，小米平板2还香吗？魔改版小米平板2双系统刷机指南
-categories: []
+categories: [Android]
 ---
 
 - 小米平板2专用PE+miui固件+Windows固件（天翼云盘）：<https://cloud.189.cn/t/7ZvaQrYF7ja2> （访问码: 5ucr）
