--- a/_posts/2023-08-02-EP111.md
+++ b/_posts/2023-08-02-EP111.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 2G内存流畅运行？5款精简修改版Windows系统，纯净、好用
-categories: []
+categories: [Windows]
 ---
 
 - 不忘初心（博客）：<https://www.pc528.net>
