--- a/_posts/2023-08-09-EP114.md
+++ b/_posts/2023-08-09-EP114.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 超简单制作WTG、系统U盘，小巧精悍的写盘软件，Rufus使用指南
-categories: []
+categories: [WTG,U盘]
 ---
 
 - Rufus（官网）：<https://rufus.ie/>
