--- a/_posts/2023-08-16-EP115.md
+++ b/_posts/2023-08-16-EP115.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 2种方法远程重装系统，拯救异地女友被流氓软件“纠缠”的电脑！
-categories: []
+categories: [系统安装,Windows]
 ---
 
 - ToDesk（官网）：<https://www.todesk.com>
